--- a/css/style.css
+++ b/css/style.css
@@ -40,16 +40,19 @@ header .header_box {
 }
 header .header_box .me_img {
     position: absolute;
-    padding-left: 972px;
+    padding-left: 998px;
+}
+header .header_box .me_img img {
+    width: 537.44px;
+    height: 800px;
 }
 header .header_box .about_txt {
     position: absolute;
     left: 226px;
     top: 530px;
     font-size: 200px;
-    color: rgba(195, 211, 187, 0.3);
+    color: rgba(195, 211, 187, 0.4);
 }
-
 header .header_box h1 {
     float: left;
     width: 65px;
@@ -1303,6 +1306,10 @@ header .header_box ul.gnb>li:hover>a {
     float: left;
     padding-left: 458px;
     padding-top: 258px;
+}
+.vision .seona_img img {
+    width: 420px;
+    height: 550px;
 }
 .vision .seona_img li {
     width: 420px;
