--- a/css/style.css
+++ b/css/style.css
@@ -1302,12 +1302,12 @@ header .header_box ul.gnb>li:hover>a {
     padding-left: 458px;
     padding-top: 92px;
 }
-.vision .seona_img {
+.vision .me_img {
     float: left;
     padding-left: 458px;
     padding-top: 190px;
 }
-.vision .seona_img img {
+.vision .me_img img {
     width: 420px;
     height: 550px;
 }
